# Backend-Vault

./: .gitignore  README.md  flaskblog.py  pyproject.toml
Flask_Blog/: .gitignore  README.md  pyproject.toml  run.py  seed_post.py
Flask_Blog/flaskblog/: __init__.py  config.py  models.py
Flask_Blog/flaskblog/errors/: handlers.py
Flask_Blog/flaskblog/posts/: forms.py  routes.py
Flask_Blog/flaskblog/templates/: home.html  layout.html  login.html  register.html  reset_token.html  user_post.html
Flask_Blog/flaskblog/templates/errors/: 403.html  404.html  (+1 more)
Flask_Blog/flaskblog/users/: routes.py
Flask_Task_Manager/: .gitignore  Dockerfile  README.md  compose.yaml  docker-entrypoint.sh  pyproject.toml  run.py
Flask_Task_Manager/flask_task_manager/: __init__.py  config.py  error_handler.py  models.py  routes.py  schemas.py  utils.py
Flask_Task_Manager/flask_task_manager/auth/: routes.py
Flask_Task_Manager/flask_task_manager/tasks/: routes.py
Flask_Task_Manager/migrations/versions/: 3d62e857a7c2_migration.py  c583938712af_initial_clean_migration.py
Flask_Task_Manager/tests/: conftest.py  test_auth.py  test_client.py  test_reset_password.py  test_task.py
flaskblog/: __init__.py  forms.py  models.py  routes.py
flaskblog/static/: main.css
flaskblog/templates/: account.html  create_post.html  home.html  layout.html  login.html  post.html  register.html  reset_request.html  user_post.html
flaskblog/users/: forms.py  routes.py  utils.py
instance/: site.db
static/: main.css
templates/: about.html  home.html  layout.html  login.html  register.html
